# CubeSolver

./: .gitignore  LeBasics.ipynb  Vision.ipynb  pyproject.toml
cubesolver/: __main__.py  clifford.py  cube.py  graphics.py  vision.py  webcam.py
